k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-os
  labels:
    app.kubernetes.io/name: web-os
    app.kubernetes.io/part-of: web-os
